--- a/app/src/main/res/layout/fragment_beauty.xml
+++ b/app/src/main/res/layout/fragment_beauty.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/main_background"
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -13,7 +14,9 @@
         android:elevation="10dp"
         app:elevation="10dp">
 
-        <include layout="@layout/custom_toolbar_back"/>
+        <include
+            android:id="@+id/include"
+            layout="@layout/custom_toolbar_back" />
 
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -29,240 +32,104 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:scrollbarThumbHorizontal="@null"
+                android:scrollbarThumbVertical="@null">
 
-                <LinearLayout
-                    android:layout_marginLeft="0.5mm"
-                    android:layout_width="match_parent"
-                    android:layout_height="12mm">
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/btn_search"
-                        style="@style/MyCardViewStyle"
-                        android:layout_width="45mm"
-                        android:layout_height="8mm"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginTop="10dp"
-                        android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        app:cardElevation="5dp"
-                        android:focusable="true">
-
-
-                        <EditText
-                            android:imeOptions="actionSearch"
-                            android:id="@+id/et_search_beauty"
-                            android:layout_width="45mm"
-                            android:layout_height="8mm"
-                            android:layout_marginLeft="1mm"
-                            android:background="@android:color/transparent"
-                            android:backgroundTint="@color/app_main_color"
-                            android:drawableLeft="@drawable/ic_search"
-                            android:hint="  Поиск"
-                            android:inputType="textCapWords"
-                            android:textColor="@color/black"
-                            android:textCursorDrawable="@drawable/cursor_color" />
-
-
-                        <ImageView
-                            android:id="@+id/iv_clear"
-                            android:layout_width="3mm"
-                            android:layout_height="3mm"
-                            android:layout_gravity="right"
-                            android:layout_marginTop="2.5mm"
-                            android:layout_marginRight="1mm"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:src="@drawable/ic_clear"
-                            android:contentDescription="TODO"
-                            android:focusable="true" />
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/card_metro"
-                        style="@style/MyCardViewStyle"
-                        android:layout_width="8mm"
-                        android:layout_height="8mm"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        app:cardElevation="4dp"
-                        android:focusable="true">
-
-                        <ImageView
-                            android:layout_width="5mm"
-                            android:layout_height="5mm"
-                            android:layout_gravity="center"
-                            android:clickable="false"
-                            android:src="@drawable/metro"
-                            android:contentDescription="TODO" />
-
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-
-                <HorizontalScrollView
+                <ScrollView
                     android:layout_width="wrap_content"
-                    android:layout_height="10mm">
+                    android:layout_height="match_parent"
+                    android:scrollbarThumbHorizontal="@null"
+                    android:scrollbarThumbVertical="@null">
 
-                    <ScrollView
-                        android:id="@+id/nestedScrollView"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="10mm">
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/btn_tag_first"
+                            android:layout_width="140dp"
+                            android:layout_height="35dp"
+                            android:layout_marginStart="10dp"
+                            android:background="@drawable/tag_background"
+                            android:fontFamily="@font/commons_demi_bold"
+                            android:text="Поликлиники"
+                            android:textAllCaps="false"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp" />
 
-                            <androidx.cardview.widget.CardView
-                                android:id="@+id/card_beauty_first"
-                                android:layout_width="23mm"
-                                android:layout_height="7mm"
-                                android:layout_marginLeft="2mm"
-                                android:layout_marginTop="0.7mm"
-                                android:layout_marginBottom="1mm"
-                                android:clickable="true"
-                                android:foreground="?android:attr/selectableItemBackground"
-                                app:cardCornerRadius="8dp"
-                                app:cardElevation="6dp"
-                                android:focusable="true">
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/btn_tag_second"
+                            android:layout_width="140dp"
+                            android:layout_height="35dp"
+                            android:layout_marginStart="10dp"
+                            android:background="@drawable/tag_background"
+                            android:fontFamily="@font/commons_demi_bold"
+                            android:text="Стоматологии"
+                            android:textAllCaps="false"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp" />
 
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/first_cat"
-                                    android:contentDescription="TODO" />
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="@string/polyclinic"
-                                    android:textColor="@color/white"
-                                    android:textSize="16sp" />
 
-                            </androidx.cardview.widget.CardView>
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/btn_tag_third"
+                            android:layout_width="150dp"
+                            android:layout_height="35dp"
+                            android:layout_marginStart="10dp"
+                            android:background="@drawable/tag_background"
+                            android:fontFamily="@font/commons_demi_bold"
+                            android:text="Салон красоты"
+                            android:textAllCaps="false"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp" />
 
-                            <androidx.cardview.widget.CardView
-                                android:id="@+id/card_beauty_second"
-                                android:layout_width="23mm"
-                                android:layout_height="7mm"
-                                android:layout_marginLeft="2mm"
-                                android:layout_marginTop="0.7mm"
-                                android:layout_marginBottom="1mm"
-                                android:clickable="true"
-                                android:foreground="?android:attr/selectableItemBackground"
-                                app:cardCornerRadius="8dp"
-                                app:cardElevation="6dp"
-                                android:focusable="true">
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/btn_tag_fourth"
+                            android:layout_width="105dp"
+                            android:layout_height="35dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:background="@drawable/tag_background"
+                            android:fontFamily="@font/commons_demi_bold"
+                            android:text="Маникюр"
+                            android:textAllCaps="false"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+                </ScrollView>
+            </HorizontalScrollView>
 
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/first_cat"
-                                    android:contentDescription="TODO" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="@string/dentistry"
-                                    android:textColor="@color/white"
-                                    android:textSize="16sp" />
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView
-                                android:id="@+id/card_beauty_third"
-                                android:layout_width="23mm"
-                                android:layout_height="7mm"
-                                android:layout_marginLeft="2mm"
-                                android:layout_marginTop="0.7mm"
-                                android:layout_marginBottom="1mm"
-                                android:clickable="true"
-                                android:foreground="?android:attr/selectableItemBackground"
-                                app:cardCornerRadius="8dp"
-                                app:cardElevation="6dp"
-                                android:focusable="true">
-
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/first_cat"
-                                    android:contentDescription="TODO" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="@string/Beauty_saloon"
-                                    android:textColor="@color/white"
-                                    android:textSize="16sp" />
-
-                            </androidx.cardview.widget.CardView>
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_marginRight="2mm"
-                                android:id="@+id/card_beauty_fourth"
-                                android:layout_width="18mm"
-                                android:layout_height="7mm"
-                                android:layout_marginLeft="2mm"
-                                android:layout_marginTop="0.7mm"
-                                android:layout_marginBottom="1mm"
-                                android:clickable="true"
-                                android:foreground="?android:attr/selectableItemBackground"
-                                app:cardCornerRadius="8dp"
-                                app:cardElevation="6dp"
-                                android:focusable="true">
-
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/first_cat"
-                                    android:contentDescription="TODO" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="Маникюр"
-                                    android:textColor="@color/white"
-                                    android:textSize="16sp" />
-
-                            </androidx.cardview.widget.CardView>
-                        </LinearLayout>
-                    </ScrollView>
-                </HorizontalScrollView>
-            </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list_notes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="50dp"
+                    android:overScrollMode="never"
+                    android:scrollbars="none" />
 
                 <ProgressBar
                     android:id="@+id/progressbar"
                     style="@style/CircularProgress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="100dp"
                     android:indeterminateTint="#411E80" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_marginRight="0.6mm"
-                    android:layout_marginLeft="0.5mm"
-                    android:id="@+id/rv_beauty_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="1mm" />
 
             </RelativeLayout>
 
