--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -89,11 +89,12 @@
                     android:scrollbars="none" />
 
                 <ProgressBar
+                    android:layout_marginTop="50dp"
                     android:id="@+id/progressbar"
                     style="@style/CircularProgress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
+                    android:layout_centerHorizontal="true"
                     android:indeterminateTint="#411E80" />
 
 
