--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -78,6 +78,7 @@
                 android:layout_marginEnd="3dp"
                 android:fontFamily="@font/commons_regular"
                 android:lineHeight="14sp"
+                android:maxLines="4"
                 android:text="Магазинге уборкага упаковкага грузчике балдар кыздар керек мед книжка менен"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
