--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -12,7 +12,6 @@
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:clickable="true"
-        android:focusable="true"
-        android:scaleType="centerCrop" />
+        android:focusable="true" />
 
 </LinearLayout>
