--- a/app/src/main/res/layout/custom_toolbar_back.xml
+++ b/app/src/main/res/layout/custom_toolbar_back.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
@@ -7,8 +7,8 @@
     android:layout_height="50dp"
     android:background="@color/app_main_color"
     android:elevation="6dp"
+    app:menu="@menu/menu_search"
     app:contentInsetStart="0dp"
-    app:layout_constraintTop_toTopOf="parent"
     app:navigationIcon="@drawable/ic_back">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,15 +30,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <ImageView
-        android:id="@+id/iv_add"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
-        android:layout_gravity="right"
-        android:layout_marginEnd="20dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:src="@drawable/ic_add" />
-</com.google.android.material.appbar.MaterialToolbar>
+</androidx.appcompat.widget.Toolbar>
