--- a/app/src/main/res/layout/fragment_work.xml
+++ b/app/src/main/res/layout/fragment_work.xml
@@ -8,16 +8,15 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
-        style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
+        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#EFEFEF"
-        android:elevation="10dp"
+        android:background="@color/app_main_color"
         app:elevation="10dp">
 
         <include
-            android:id="@+id/work_toolbar"
-            layout="@layout/custom_toolbar_back" />
+            android:id="@+id/include"
+            layout="@layout/custom_toolbar_search" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -117,7 +116,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="5dp"
-                    android:layout_marginBottom="50dp"
+                    android:layout_marginBottom="70dp"
                     android:overScrollMode="never"
                     android:scrollbars="none" />
 
