--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,7 +3,9 @@
     <style name="Theme.ZuhaApp" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="snackbarStyle">@style/Widget.MaterialComponents.Snackbar</item>
+        <item name="searchViewStyle">@style/CustomSearchViewStyle</item>
         <item name="colorAccent">@color/white</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_color</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="colorPrimary">@color/app_main_color</item>
         <item name="colorPrimaryDark">@color/app_main_color</item>
@@ -20,9 +22,35 @@
         <!-- Customize your theme here. -->
     </style>
 
+
+
+    <style name="RoundedCornerButton" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="background">@drawable/custom_toast_error</item>
+        <item name="colorButtonNormal">#1a237e</item>
+        <item name="colorControlHighlight">#673ab7</item>
+    </style>
+
+    <style name="MyCardViewStyle" parent="Theme.AppCompat.Light">
+        <item name="cardCornerRadius">7dp</item>
+        <item name="cardBackgroundColor">#FFFFFF</item>
+    </style>
+
+
+    <style name="CircularProgress" parent="Theme.MaterialComponents.Light">
+        <item name="colorAccent">@color/app_main_color</item>
+    </style>
+
     <style name="GalleryStyle" parent="Widget.MaterialComponents.Toolbar.Primary">
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorPrimary">@color/trans</item>
         <item name="titleTextColor">@color/white</item>
     </style>
+
+    <style name="CustomSearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="queryBackground">@drawable/search_background</item>
+        <item name="submitBackground">@drawable/search_background</item>
+    </style>
+
+
+
 </resources>
